--- a/themes/catching-the-spirit/sass/_header.scss
+++ b/themes/catching-the-spirit/sass/_header.scss
@@ -26,13 +26,14 @@
         }
         .title-desktop{
             @include desktop{
+                text-align: left;
                 font-family: $font__subheader;
                 margin-top: 0.7rem;
             }
             h1{
                 @include desktop{
                     color: white;
-                    font-size: 40px;
+                    font-size: 37px;
                     font-weight: 100;
                     margin-bottom: 0.5rem;
                     padding: 0;
@@ -41,6 +42,7 @@
             span{
                 @include desktop{
                     font-size: 24px;
+                    font-weight: 100;
                 }
             }
 
@@ -56,6 +58,7 @@
                 padding: 0;
             }
             i{
+                font-size: 24px;
                 margin-left: 1rem;
             }
             
